2012-05-28  Daiki Ueno  <ueno@unixuser.org>

	* mm-decode.el (mm-inhibit-auto-detect-attachment): New variable.
	(mm-dissect-singlepart): Don't guess the MIME type of
	application/octet-stream parts if mm-inhibit-auto-detect-attachment is
	set.
	(mm-dissect-multipart): Bind mm-inhibit-auto-detect-attachment if the
	toplevel MIME type is multipart/encrypted.

2012-05-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-msg.el (gnus-msg-mail): Ensure that gnus-newsgroup-name is
	a string so that Gcc works (bug#11514).

2012-05-26  Stefan Monnier  <monnier@iro.umontreal.ca>

	* legacy-gnus-agent.el (gnus-agent-unhook-expire-days):
	* gnus-demon.el (gnus-demon-init): Don't bother with type-of.

2012-05-25  Stefan Monnier  <monnier@iro.umontreal.ca>

	* gnus-win.el (gnus-configure-frame): Don't signal an error when
	jumping to *Server* from a dedicated *Group* window.
	(gnus-configure-frame): CSE.

	* gnus-registry.el: Minor style cleanup.
	(gnus-registry--set/remove-mark): New function, extracted from
	gnus-registry-install-shortcuts.
	(gnus-registry-install-shortcuts): Use it.

2012-05-25  Katsumi Yamaoka  <yamaoka@jpl.org>

	* nnspool.el (news-path): Use eval-and-compile.

2012-05-24  Glenn Morris  <rgm@gnu.org>

	* nnspool.el (news-directory, news-path, news-inews-program):
	Move here from paths.el.  Don't see a need for these to be autoloaded.

	* gnus.el (gnus-default-nntp-server): Make it a defcustom.
	Merge in doc from paths.el version.  Don't see any need for this to be
	autoloaded, or for the warning about users not setting it.

2011-12-02  Wolfgang Jenkner  <wjenkner@inode.at>

	* gnus-agent.el (gnus-agent-save-active): Deal with the "groups"
	format.  In particular, add an optional argument and a docstring.

	* gnus-start.el (gnus-groups-to-gnus-format): Use it.

	* nntp.el (nntp-finish-retrieve-group-infos): Make `nntp-server-buffer'
	current before calling `gnus-groups-to-gnus-format'.
	Note that this was already the case for `gnus-active-to-gnus-format'.
